k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
        #================================
        # 1. API paths routed to backend-service
        #================================
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
        #================================
        # 2. ACTUATOR
        #================================
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
        #================================
        # 3. FRONTEND
        #================================
        

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
